--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>hello</h1>
+<body>
+
+	<h1>Beetroot (Beta vulgaris)</h1>
+
+	<br>
+
+	<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/1024px-Beets-Bundle.jpg">
+		<caption> A bundle of organic beets from a local farm food co-op program< /caption>
+
+	<br>
+
+</body>
