--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <body>
 
-	<h1>Beetroot (Beta vulgaris)</h1>
+	<h1>Beetroot <em>(Beta vulgaris)</em></h1>
 
 	<br>
 
 	<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/1024px-Beets-Bundle.jpg">
-		<caption> A bundle of organic beets from a local farm food co-op program< /caption>
+		<caption> A bundle of organic beets from a local farm food co-op program </caption>
 
 	<br>
 
