--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <body>
 
-	<h1>Beetroot <em>(Beta vulgaris)</em></h1>
+	<h1>Beetroot <i>(Beta vulgaris)</i></h1>
 
 	<br>
 
@@ -8,5 +8,16 @@
 		<caption> A bundle of organic beets from a local farm food co-op program </caption>
 
 	<br>
+
+	<p>A bundle of organic beets from a local farm food co-op program.
+	55 to 65 days are needed from germination to harvest of the root.</p>
+
+	<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a
+	cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
+	shredded, either alone or combined with any salad vegetable.</p>
+
+	<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.” <cite>— Jim Halpert</cite> </blockquote>
+
+
 
 </body>
