--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 
 	<br>
 
-	<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/1024px-Beets-Bundle.jpg">
-		<caption> A bundle of organic beets from a local farm food co-op program </caption>
+	<figure>
+		<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/1024px-Beets-Bundle.jpg">
+		<figcaption> A bundle of organic beets from a local farm food co-op program </figcaption>
+	</figure>
 
 	<br>
 
@@ -16,7 +18,26 @@
 	cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
 	shredded, either alone or combined with any salad vegetable.</p>
 
-	<blockquote>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.” <cite>— Jim Halpert</cite> </blockquote>
+	<blockquote>
+		<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
+		<cite>— Jim Halpert</cite> 
+	</blockquote>
+
+	<blockquote>
+		<p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
+		clean them out of their beets.</p>
+		<cite>— Chris Pratt</cite>
+	</blockquote>
+
+	<h2>Common Varieties</h2>
+	
+		<ol>
+			<li>Albino</li>
+			<li>Bull's Blood</li>
+			<li>Chioggia</li>
+			<li>Detroit Dark Red</li>
+			<li>Early Wonder</li>
+		</ol>
 
 
 
