fixed blcokquote formatting

--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
 
 	<blockquote>
 		<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
-		<cite>— Jim Halpert</cite> 
+		<footer>
+		—<cite>Jim Halpert</cite> 
+	</footer>
 	</blockquote>
 
 	<blockquote>
 		<p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
 		clean them out of their beets.</p>
-		<cite>— Chris Pratt</cite>
+		<footer>
+		—<cite>Chris Pratt</cite>
+		</footer>
 	</blockquote>
 
 	<h2>Common Varieties</h2>
-	
+
 		<ol>
 			<li>Albino</li>
 			<li>Bull's Blood</li>
@@ -39,6 +43,27 @@
 			<li>Early Wonder</li>
 		</ol>
 
+	<h2>Nutritional Information</h2>
+		<p>Serving size: 100 g</p>
+
+		<dl>
+			<dt>Energy: <dd><data>180 kJ</data></dd></dt>
+			<dt>Carbohydrates: <dd><data>9.96 g</data></dd></dt>
+			<dt>Fat: <dd><data>0.18 g</data></dd></dt>
+			<dt>Protein: <dd><data>1.68 g</data></dd></dt>
+		</dl>
 
 
 </body>
+
+
+
+
+
+
+
+
+
+
+
+
