added ul and footer

--- a/index.html
+++ b/index.html
@@ -1,60 +1,103 @@
-<body>
+<html>
+	<head>
+		<title>Beetroots</title>
+		<link href="css/general.css" rel="stylesheet">
+	</head>
+		<body>
+			<header>
+			<h1>Beetroot <i>(Beta vulgaris)</i></h1>
+			</header>
 
-	<h1>Beetroot <i>(Beta vulgaris)</i></h1>
+			<br>
 
-	<br>
+			<figure>
+				<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/1024px-Beets-Bundle.jpg">
+				<figcaption> A bundle of organic beets from a local farm food co-op program </figcaption>
+			</figure>
 
-	<figure>
-		<img src="http://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Beets-Bundle.jpg/1024px-Beets-Bundle.jpg">
-		<figcaption> A bundle of organic beets from a local farm food co-op program </figcaption>
-	</figure>
+			<br>
 
-	<br>
+			<p>A bundle of organic beets from a local farm food co-op program.
+			55 to 65 days are needed from germination to harvest of the root.</p>
 
-	<p>A bundle of organic beets from a local farm food co-op program.
-	55 to 65 days are needed from germination to harvest of the root.</p>
+			<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a
+			cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
+			shredded, either alone or combined with any salad vegetable.</p>
 
-	<p>The usually deep purple roots of <strong>beetroot</strong> are eaten either grilled, boiled, or roasted as a
-	cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and
-	shredded, either alone or combined with any salad vegetable.</p>
+			<blockquote>
+				<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
+				<footer>
+				—<cite>Jim Halpert</cite> 
+			</footer>
+			</blockquote>
 
-	<blockquote>
-		<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
-		<footer>
-		—<cite>Jim Halpert</cite> 
-	</footer>
-	</blockquote>
+			<blockquote>
+				<p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
+				clean them out of their beets.</p>
+				<footer>
+				—<cite>Chris Pratt</cite>
+				</footer>
+			</blockquote>
 
-	<blockquote>
-		<p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
-		clean them out of their beets.</p>
-		<footer>
-		—<cite>Chris Pratt</cite>
-		</footer>
-	</blockquote>
+			<h2>Common Varieties</h2>
 
-	<h2>Common Varieties</h2>
+				<ol>
+					<li>Albino</li>
+					<li>Bull's Blood</li>
+					<li>Chioggia</li>
+					<li>Detroit Dark Red</li>
+					<li>Early Wonder</li>
+				</ol>
 
-		<ol>
-			<li>Albino</li>
-			<li>Bull's Blood</li>
-			<li>Chioggia</li>
-			<li>Detroit Dark Red</li>
-			<li>Early Wonder</li>
-		</ol>
+			<h2>Nutritional Information</h2>
+				<p>Serving size: 100 g</p>
 
-	<h2>Nutritional Information</h2>
-		<p>Serving size: 100 g</p>
+				<dl>
+					<dt>Energy:</dt> 
+						<dd>
+							<data>180 kJ</data>
+						</dd>
+					<dt>Carbohydrates:</dt>
+						 <dd>
+						 	<data>9.96 g</data>
+						 </dd>
+					<dt>Fat:</dt>
+						 <dd>
+						 	<data>0.18 g</data>
+						 </dd>
+					<dt>Protein:</dt>
+						 <dd>
+						 	<data>1.68 g</data>
+						 </dd>
+				</dl>
 
-		<dl>
-			<dt>Energy: <dd><data>180 kJ</data></dd></dt>
-			<dt>Carbohydrates: <dd><data>9.96 g</data></dd></dt>
-			<dt>Fat: <dd><data>0.18 g</data></dd></dt>
-			<dt>Protein: <dd><data>1.68 g</data></dd></dt>
-		</dl>
+			<footer>
+				<ul>
+					<li>
+						<a href="#">Crimson</a>
+					</li>
+					<li>
+						<a href="#">Awesome</a>
+					</li>
+					<li>
+						<a href="#">Pickle-able</a>
+					</li>
+					<li>
+						<a href="#">Vegetable!</a>
+					</li>
+					<li>
+						<a href="#">Delicious</a>
+					</li>
+				</ul>
+
+				<p>Source:
+					<a href="http://en.wikipedia.org/wiki/Beetroot">Wikipedia</a>
+				; Last modified:<time>Aug 30,2014</time></p>
+			</footer>
 
 
-</body>
+		</body>
+</html>
 
 
 
