--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			</blockquote>
 
 			<blockquote>
-				<p>I have some weird habits. For instance, I love beets. Show me a salad bar and I will
+				<p>I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will
 				clean them out of their beets.</p>
 				<footer>
 				—<cite>Chris Pratt</cite>
