--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
 			<blockquote>
 				<p>Fact, bears eat beets. Bears, beets, “Battlestar Galactica.”</p>
-				<footer>
+				<footer class="block-footer">
 				—<cite>Jim Halpert</cite> 
-			</footer>
+				</footer>
 			</blockquote>
 
 			<blockquote>
 				<p>I have some <i>weird</i> habits. For instance, <strong>I love beets.</strong> Show me a salad bar and I will
 				clean them out of their beets.</p>
-				<footer>
+				<footer class="block-footer">
 				—<cite>Chris Pratt</cite>
 				</footer>
 			</blockquote>
@@ -48,6 +48,8 @@
 					<li>Detroit Dark Red</li>
 					<li>Early Wonder</li>
 				</ol>
+
+		<div class="nutrition">
 
 			<h2>Nutritional Information</h2>
 				<p>Serving size: 100 g</p>
@@ -70,6 +72,7 @@
 						 	<data>1.68 g</data>
 						 </dd>
 				</dl>
+		</div>
 
 			<footer>
 				<ul>
